--- a/src/appData.json
+++ b/src/appData.json
@@ -1,218 +1,254 @@
 [
   {
-    "image": "/images/app-image-1.jpg",
-    "title": "Forest: Focus For Productivity",
-    "companyName": "Forest Corp.",
+    "image": "https://placehold.co/100x100/50bda1/ffffff?text=FOC",
+    "title": "Forest: Focus Timer",
+    "companyName": "ForestApp",
     "id": 1,
-    "description": "Stay focused and present. Plant a virtual tree when you start working. If you leave the app, the tree will die. Achieve your goals with deep concentration.",
-    "size": 75,
-    "reviews": 12000,
-    "ratingAvg": 4.5,
-    "downloads": 9000000,
-    "ratings": [
-      { "name": "1 star", "count": 100 },
-      { "name": "2 star", "count": 200 },
-      { "name": "3 star", "count": 1700 },
-      { "name": "4 star", "count": 4000 },
-      { "name": "5 star", "count": 6000 }
-    ]
-  },
-  {
-    "image": "/images/app-image-2.jpg",
-    "title": "SmPlan: ToDo List With Reminder",
-    "companyName": "SmPlan Labs",
-    "id": 2,
-    "description": "A comprehensive to-do list and task management app that keeps you organized and ensures you never miss a deadline with smart reminders.",
-    "size": 45,
-    "reviews": 8500,
-    "ratingAvg": 4.3,
-    "downloads": 5000000,
-    "ratings": [
-      { "name": "1 star", "count": 150 },
-      { "name": "2 star", "count": 250 },
-      { "name": "3 star", "count": 1500 },
-      { "name": "4 star", "count": 3500 },
-      { "name": "5 star", "count": 3100 }
-    ]
-  },
-  {
-    "image": "/images/app-image-3.jpg",
-    "title": "FLIP - Focus Timer For Study",
-    "companyName": "FLIP Dev",
-    "id": 3,
-    "description": "The ultimate study timer that helps students track and manage their study sessions with an intuitive flipping mechanism.",
-    "size": 30,
-    "reviews": 15000,
-    "ratingAvg": 4.7,
-    "downloads": 10000000,
-    "ratings": [
-      { "name": "1 star", "count": 50 },
-      { "name": "2 star", "count": 100 },
-      { "name": "3 star", "count": 1500 },
-      { "name": "4 star", "count": 5500 },
-      { "name": "5 star", "count": 7850 }
-    ]
-  },
-  {
-    "image": "/images/app-image-4.jpg",
-    "title": "Pomocat - Cute Pomodoro Timer",
-    "companyName": "Pomocat Studios",
-    "id": 4,
-    "description": "A delightful Pomodoro timer with adorable cat themes to make your work intervals fun and motivating.",
-    "size": 60,
-    "reviews": 9200,
-    "ratingAvg": 4.6,
-    "downloads": 7500000,
-    "ratings": [
-      { "name": "1 star", "count": 80 },
-      { "name": "2 star", "count": 120 },
-      { "name": "3 star", "count": 1000 },
-      { "name": "4 star", "count": 4000 },
-      { "name": "5 star", "count": 4000 }
-    ]
-  },
-  {
-    "image": "/images/app-image-5.jpg",
-    "title": "Time Planner: Schedule & Tasks",
-    "companyName": "Planner Tools",
-    "id": 5,
-    "description": "An all-in-one app for planning your day, scheduling tasks, and managing your calendar efficiently.",
-    "size": 90,
-    "reviews": 11000,
-    "ratingAvg": 4.4,
-    "downloads": 6500000,
-    "ratings": [
-      { "name": "1 star", "count": 110 },
-      { "name": "2 star", "count": 190 },
-      { "name": "3 star", "count": 1800 },
-      { "name": "4 star", "count": 4500 },
-      { "name": "5 star", "count": 4400 }
-    ]
-  },
-  {
-    "image": "/images/app-image-6.jpg",
-    "title": "Morning Habits - Daily Routine",
-    "companyName": "Habit Builders",
-    "id": 6,
-    "description": "Establish powerful morning routines and track your daily habits to achieve personal growth and success.",
-    "size": 55,
-    "reviews": 7800,
-    "ratingAvg": 4.2,
-    "downloads": 4800000,
-    "ratings": [
-      { "name": "1 star", "count": 200 },
-      { "name": "2 star", "count": 300 },
-      { "name": "3 star", "count": 1500 },
-      { "name": "4 star", "count": 3000 },
-      { "name": "5 star", "count": 2800 }
-    ]
-  },
-  {
-    "image": "/images/app-image-7.jpg",
-    "title": "Focus Plant: Pomodoro Forest",
-    "companyName": "Focus Tree Games",
-    "id": 7,
-    "description": "Gamified focus timer where you grow a forest by staying productive. A unique take on the Pomodoro technique.",
-    "size": 80,
-    "reviews": 13500,
+    "description": "Plant a seed, stay focused, and watch your tree grow. If you leave the app, your tree dies! Gamify your productivity and overcome phone addiction.",
+    "size": 120,
+    "reviews": 920000,
     "ratingAvg": 4.8,
     "downloads": 9500000,
     "ratings": [
-      { "name": "1 star", "count": 50 },
-      { "name": "2 star", "count": 50 },
-      { "name": "3 star", "count": 500 },
-      { "name": "4 star", "count": 4000 },
-      { "name": "5 star", "count": 8900 }
+      { "name": "1 star", "count": 25000 },
+      { "name": "2 star", "count": 30000 },
+      { "name": "3 star", "count": 55000 },
+      { "name": "4 star", "count": 120000 },
+      { "name": "5 star", "count": 690000 }
     ]
   },
   {
-    "image": "/images/app-image-8.jpg",
-    "title": "Alarmy - Alarm Clock & Sleep",
-    "companyName": "Delight Labs",
-    "id": 8,
-    "description": "The world's most annoying (but effective) alarm clock. Wake up easily with mandatory missions and sleep tracking.",
-    "size": 100,
-    "reviews": 20000,
-    "ratingAvg": 4.1,
-    "downloads": 12000000,
-    "ratings": [
-      { "name": "1 star", "count": 500 },
-      { "name": "2 star", "count": 700 },
-      { "name": "3 star", "count": 2000 },
-      { "name": "4 star", "count": 5000 },
-      { "name": "5 star", "count": 6800 }
-    ]
-  },
-  {
-    "image": "/images/app-image-9.jpg",
-    "title": "Mindful Meditation Guide",
-    "companyName": "Zen App",
-    "id": 9,
-    "description": "Daily guided meditations to reduce stress, improve sleep, and increase focus. Perfect for beginners and advanced users.",
+    "image": "https://placehold.co/100x100/1e88e5/ffffff?text=SLK",
+    "title": "Slack: Team Communication",
+    "companyName": "Slack Tech",
+    "id": 2,
+    "description": "The communication platform for the modern workplace. Connect with your team, organize conversations, and find information instantly.",
     "size": 150,
-    "reviews": 18000,
+    "reviews": 750000,
+    "ratingAvg": 4.5,
+    "downloads": 8100000,
+    "ratings": [
+      { "name": "1 star", "count": 50000 },
+      { "name": "2 star", "count": 60000 },
+      { "name": "3 star", "count": 80000 },
+      { "name": "4 star", "count": 160000 },
+      { "name": "5 star", "count": 400000 }
+    ]
+  },
+  {
+    "image": "https://placehold.co/100x100/673ab7/ffffff?text=CAL",
+    "title": "Calm: Meditation & Sleep",
+    "companyName": "Calm, Inc.",
+    "id": 3,
+    "description": "Calm is the #1 app for meditation and sleep. Join the millions experiencing lower stress, less anxiety, and more restful sleep.",
+    "size": 200,
+    "reviews": 1100000,
     "ratingAvg": 4.9,
-    "downloads": 15000000,
+    "downloads": 12200000,
     "ratings": [
-      { "name": "1 star", "count": 20 },
-      { "name": "2 star", "count": 30 },
-      { "name": "3 star", "count": 100 },
-      { "name": "4 star", "count": 2000 },
-      { "name": "5 star", "count": 15850 }
+      { "name": "1 star", "count": 15000 },
+      { "name": "2 star", "count": 25000 },
+      { "name": "3 star", "count": 35000 },
+      { "name": "4 star", "count": 150000 },
+      { "name": "5 star", "count": 875000 }
     ]
   },
   {
-    "image": "/images/app-image-10.jpg",
-    "title": "MealPrep: Healthy Eating",
-    "companyName": "Kitchen Labs",
-    "id": 10,
-    "description": "Your personal meal planning assistant. Easily create weekly meal plans, grocery lists, and track your nutrition.",
-    "size": 95,
-    "reviews": 6000,
-    "ratingAvg": 4.0,
-    "downloads": 3500000,
+    "image": "https://placehold.co/100x100/f44336/ffffff?text=DUO",
+    "title": "Duolingo: Learn Languages",
+    "companyName": "Duolingo",
+    "id": 4,
+    "description": "The world's most popular way to learn a language. It's 100% free, fun, and scientifically proven to work.",
+    "size": 180,
+    "reviews": 1500000,
+    "ratingAvg": 4.7,
+    "downloads": 15500000,
     "ratings": [
-      { "name": "1 star", "count": 300 },
-      { "name": "2 star", "count": 400 },
-      { "name": "3 star", "count": 1800 },
-      { "name": "4 star", "count": 2000 },
-      { "name": "5 star", "count": 1500 }
+      { "name": "1 star", "count": 40000 },
+      { "name": "2 star", "count": 50000 },
+      { "name": "3 star", "count": 100000 },
+      { "name": "4 star", "count": 250000 },
+      { "name": "5 star", "count": 1060000 }
     ]
   },
   {
-    "image": "/images/app-image-11.jpg",
-    "title": "CodeMentor: Learn Programming",
-    "companyName": "DevAcademy",
-    "id": 11,
-    "description": "Interactive lessons and coding challenges for popular programming languages right on your phone.",
-    "size": 120,
-    "reviews": 14000,
-    "ratingAvg": 4.6,
+    "image": "https://placehold.co/100x100/ff9800/ffffff?text=SMN",
+    "title": "SmPlan: ToDo List With Reminder",
+    "companyName": "Smart Planning Co.",
+    "id": 5,
+    "description": "A powerful task manager and planner designed to simplify your life. Easily organize your tasks, set reminders, and track your progress.",
+    "size": 80,
+    "reviews": 54000,
+    "ratingAvg": 4.9,
     "downloads": 8000000,
     "ratings": [
-      { "name": "1 star", "count": 70 },
-      { "name": "2 star", "count": 130 },
+      { "name": "1 star", "count": 500 },
+      { "name": "2 star", "count": 1000 },
       { "name": "3 star", "count": 1500 },
-      { "name": "4 star", "count": 5000 },
-      { "name": "5 star", "count": 7300 }
+      { "name": "4 star", "count": 10000 },
+      { "name": "5 star", "count": 41000 }
     ]
   },
   {
-    "image": "/images/app-image-12.jpg",
-    "title": "BudgetBoss: Expense Tracker",
-    "companyName": "Finance Flow",
-    "id": 12,
-    "description": "Track your spending, manage budgets, and save money with simple, intuitive expense tracking.",
-    "size": 40,
-    "reviews": 10500,
-    "ratingAvg": 4.5,
-    "downloads": 7000000,
+    "image": "https://placehold.co/100x100/4caf50/ffffff?text=DOC",
+    "title": "Docs: Document Editor",
+    "companyName": "Google",
+    "id": 6,
+    "description": "Create, edit, and collaborate on documents from your phone or tablet. Works even when you're offline.",
+    "size": 110,
+    "reviews": 600000,
+    "ratingAvg": 4.4,
+    "downloads": 7200000,
     "ratings": [
-      { "name": "1 star", "count": 100 },
-      { "name": "2 star", "count": 150 },
-      { "name": "3 star", "count": 1200 },
-      { "name": "4 star", "count": 4000 },
-      { "name": "5 star", "count": 5050 }
+      { "name": "1 star", "count": 55000 },
+      { "name": "2 star", "count": 65000 },
+      { "name": "3 star", "count": 75000 },
+      { "name": "4 star", "count": 100000 },
+      { "name": "5 star", "count": 305000 }
+    ]
+  },
+  {
+    "image": "https://placehold.co/100x100/9c27b0/ffffff?text=FIG",
+    "title": "Figma: Design & Prototype",
+    "companyName": "Figma, Inc.",
+    "id": 7,
+    "description": "Collaborate on design projects in real-time with your team. View, comment, and inspect designs anywhere.",
+    "size": 170,
+    "reviews": 450000,
+    "ratingAvg": 4.6,
+    "downloads": 5800000,
+    "ratings": [
+      { "name": "1 star", "count": 30000 },
+      { "name": "2 star", "count": 40000 },
+      { "name": "3 star", "count": 60000 },
+      { "name": "4 star", "count": 120000 },
+      { "name": "5 star", "count": 200000 }
+    ]
+  },
+  {
+    "image": "https://placehold.co/100x100/00bcd4/ffffff?text=TWD",
+    "title": "Tide: Sleep & Focus Sounds",
+    "companyName": "Tide App",
+    "id": 8,
+    "description": "Combine ambient sounds, nature sounds, and guided meditation to help you sleep, focus, or relax.",
+    "size": 90,
+    "reviews": 320000,
+    "ratingAvg": 4.7,
+    "downloads": 4900000,
+    "ratings": [
+      { "name": "1 star", "count": 10000 },
+      { "name": "2 star", "count": 20000 },
+      { "name": "3 star", "count": 30000 },
+      { "name": "4 star", "count": 80000 },
+      { "name": "5 star", "count": 180000 }
+    ]
+  },
+  {
+    "image": "https://placehold.co/100x100/ffc107/000000?text=SPY",
+    "title": "Spotify: Music and Podcasts",
+    "companyName": "Spotify",
+    "id": 9,
+    "description": "Play millions of songs and podcasts for free. Stream music and podcasts you love and find music from all over the world.",
+    "size": 130,
+    "reviews": 2100000,
+    "ratingAvg": 4.4,
+    "downloads": 25000000,
+    "ratings": [
+      { "name": "1 star", "count": 150000 },
+      { "name": "2 star", "count": 200000 },
+      { "name": "3 star", "count": 350000 },
+      { "name": "4 star", "count": 450000 },
+      { "name": "5 star", "count": 950000 }
+    ]
+  },
+  {
+    "image": "https://placehold.co/100x100/795548/ffffff?text=RMT",
+    "title": "RemNote: All-in-one Note-Taking",
+    "companyName": "RemNote Team",
+    "id": 10,
+    "description": "The powerful all-in-one note-taking app that helps you learn and organize your knowledge using Spaced Repetition.",
+    "size": 100,
+    "reviews": 150000,
+    "ratingAvg": 4.8,
+    "downloads": 1800000,
+    "ratings": [
+      { "name": "1 star", "count": 3000 },
+      { "name": "2 star", "count": 5000 },
+      { "name": "3 star", "count": 7000 },
+      { "name": "4 star", "count": 35000 },
+      { "name": "5 star", "count": 100000 }
+    ]
+  },
+  {
+    "image": "https://placehold.co/100x100/009688/ffffff?text=ASL",
+    "title": "Asana: Project Management",
+    "companyName": "Asana, Inc.",
+    "id": 11,
+    "description": "Manage your team's projects, tasks, and deadlines with Asana. Stay organized and hit your goals.",
+    "size": 140,
+    "reviews": 500000,
+    "ratingAvg": 4.3,
+    "downloads": 6500000,
+    "ratings": [
+      { "name": "1 star", "count": 50000 },
+      { "name": "2 star", "count": 70000 },
+      { "name": "3 star", "count": 90000 },
+      { "name": "4 star", "count": 120000 },
+      { "name": "5 star", "count": 170000 }
+    ]
+  },
+  {
+    "image": "https://placehold.co/100x100/e91e63/ffffff?text=GRL",
+    "title": "GivRelief: Daily Giving",
+    "companyName": "GivRelief Foundation",
+    "id": 12,
+    "description": "A simple way to give small amounts daily to verified charities around the world, making a big impact over time.",
+    "size": 60,
+    "reviews": 85000,
+    "ratingAvg": 4.9,
+    "downloads": 1200000,
+    "ratings": [
+      { "name": "1 star", "count": 500 },
+      { "name": "2 star", "count": 1000 },
+      { "name": "3 star", "count": 3000 },
+      { "name": "4 star", "count": 10000 },
+      { "name": "5 star", "count": 70500 }
+    ]
+  },
+  {
+    "image": "https://placehold.co/100x100/607d8b/ffffff?text=WET",
+    "title": "WeatherPro: Forecast & Radar",
+    "companyName": "Weather Systems",
+    "id": 13,
+    "description": "Accurate, real-time weather forecasts, interactive radar maps, and severe weather alerts for any location worldwide.",
+    "size": 95,
+    "reviews": 620000,
+    "ratingAvg": 4.6,
+    "downloads": 7500000,
+    "ratings": [
+      { "name": "1 star", "count": 45000 },
+      { "name": "2 star", "count": 55000 },
+      { "name": "3 star", "count": 70000 },
+      { "name": "4 star", "count": 120000 },
+      { "name": "5 star", "count": 330000 }
+    ]
+  },
+  {
+    "image": "https://placehold.co/100x100/ff5722/ffffff?text=BND",
+    "title": "BandLab: Music Making Studio",
+    "companyName": "BandLab Singapore",
+    "id": 14,
+    "description": "A free, cloud-based music recording studio and social music platform. Create, collaborate, and share your music.",
+    "size": 250,
+    "reviews": 700000,
+    "ratingAvg": 4.7,
+    "downloads": 9100000,
+    "ratings": [
+      { "name": "1 star", "count": 20000 },
+      { "name": "2 star", "count": 30000 },
+      { "name": "3 star", "count": 50000 },
+      { "name": "4 star", "count": 200000 },
+      { "name": "5 star", "count": 400000 }
     ]
   }
 ]
