--- a/package.json
+++ b/package.json
@@ -1,26 +1,1 @@
-{
-  "name": "hero-apps-vite-project",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.9.4",
-    "recharts": "^2.10.3"
-  },
-  "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
-    "vite": "^5.3.1"
-  }
-}
+{"name":"hero-app","version":"1.0.0","private":true,"scripts":{"dev":"vite","build":"vite build","preview":"vite preview"},"dependencies":{"clsx":"^1.2.1","react":"^18.2.0","react-dom":"^18.2.0","react-router-dom":"^6.12.1","recharts":"^2.6.2"},"devDependencies":{"autoprefixer":"^10.4.21","postcss":"^8.5.6","tailwindcss":"^4.1.14","vite":"^5.0.0"}}
